--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@
 
 .card{flex-direction: row;
       width:440px;
-      margin:20% 5%;
       border-radius:10px;
       display: flex;
       border:2px black;
@@ -30,7 +29,10 @@
 }
 
 
-body{background:#eaeaea;}
+body{background:#eaeaea;
+     height:100vh;
+     Display:grid;
+     text-alin: center}
 
 h1{font-size:25px;
 text-align: left;
