--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .card-content{
 
   display:grid;
-  width:480px;;
+  width:480px;
   text-align:left;
   padding-left:20px;
   margin-right:20px;
@@ -32,7 +32,7 @@
 body{background:#eaeaea;
      height:100vh;
      Display:grid;
-     text-alin: center}
+     text-align:center}
 
 h1{font-size:25px;
 text-align: left;
