--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
       width:440px;
       border-radius:10px;
       display: flex;
+      margin:20% 5%;
       border:2px black;
       }
 .card:hover{
@@ -29,10 +30,7 @@
 }
 
 
-body{background:#eaeaea;
-     height:100vh;
-     Display:grid;
-     place-idem:center}
+body{background:#eaeaea;}
 
 h1{font-size:25px;
 text-align: left;
